@@ -1,4 +1,9 @@
 2005-11-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: Added a menu 'Edit' which contains 'Undo' and
+	  'Apply'. (#322550)
+
+2005-11-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	* configure.in: raised dependencies to >=gtkmm-2.6 and >=parted-1.6.25
 
 2005-11-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
